# park-miller-carta-prng

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  binding.gyp  build.rs  package-lock.json  package.json
.cargo/: config
archive/rand31-park-miller-carta/: rand31-park-miller-carta-c-test.c  rand31-park-miller-carta-dsPIC-asm.s  rand31-park-miller-carta.cc  rand31-park-miller-fp.c  rand31-park-miller-fp.h
src/: bench.coffee  bindings.h  c_api.rs  emscripten.rs  index.coffee  index.html  lib.rs  napi.cc  test.coffee  wasm.rs
src/archive/: bindings.rs  mod.rs
