[package]
name = "park-miller-carta-prng"
version = "0.1.0"
authors = ["kenOfYugen <kenzone@gmail.com>"]
license = "MIT"
repository = "https://github.com/kenOfYugen/park-miller-carta-prng"
keywords = ["prng", "random", "park", "miller", "carta"]
exclude = [
    "public/assets/*",
    "dist/*",
    "*.coffee",
    "*.json",
    "target/*"
]

[dependencies]

[target.'cfg(not(target_os = "emscripten"))'.build-dependencies]
bindgen = "0.32.3"
cc = { version = "1.0.4", features = ["parallel"] }

[lib]
name = "prng"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]


[[bin]]
name = "emscripten"
path = "src/emscripten.rs"