[package]
name = "park-miller-carta-prng"
version = "0.1.3"
authors = ["kenOfYugen <kenzone@gmail.com>"]
description = "An efficient Pseudo-Random Number Generator"
license = "MIT"
repository = "https://github.com/kenOfYugen/park-miller-carta-prng"
keywords = ["prng", "random", "park", "miller", "carta"]
readme = "README.md"
exclude = [
    "public/assets/*",
    "dist/*",
    "*.coffee",
    "*.json",
    "target/*"
]

[dependencies]

[target.'cfg(not(target_os = "emscripten"))'.build-dependencies]
bindgen = "0.43.0"
cc = "1.0.25"
cbindgen = "0.6.6"


[lib]
name = "prng"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[[bin]]
name = "emscripten"
path = "src/emscripten.rs"